refactor(vincent-rest-api): clean APIs, remove deletion, query param, yaml file
